kubernetes_config/my-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bankbe-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: bankbe-server
          servicePort: 80
